2009-03-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (read_text_file):
	made more generic, renamed to read_file
	(handle_credits_command): adapted

	* avatarsay.c (avatar_command):
	new commands: rawaudiosettings, rawaudio, loadrawaudio
	(handle_rawaudiosettings_command, handle_rawaudio_command)
	(handle_loadrawaudio_command): new functions

2009-03-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.pas (sound):
	sound generator (still buggy)

2009-03-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_load_raw_data):
	new function

2009-02-24  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.16.0 released

2009-02-21  Andreas K. Foerster  <info@akfoerster.de>

	* avtarsay.c (run_info):
	enforce UTF-8 for german info pages

2009-02-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (fillaudio):
	pause the sound system after playing the sound

2009-02-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_choice):
	use of mouse-wheel + other changes

2009-02-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avtterm_initialize):
	support macro USE_OPENPTY for old/broken systems

2009-02-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (set_encoding), avtterm.c (set_encoding):
	fallback to US-ASCII if encoding not supported by iconv

2009-02-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command):
	command: avatarimage info

2009-02-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_wait_key, avt_decide):
	call avt_analyze_event, better handling of screen positions

2009-02-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (background_color):
	new variable, many functions adapted

2009-01-30  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_decide):
	new function

2009-01-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (handle_back_command):