@@ -1,5 +1,5 @@
 \input texinfo   @c -*-texinfo-*-
-@comment $Id: akfavatar-en.texinfo,v 2.50 2009-03-16 13:32:27 akf Exp $
+@comment $Id: akfavatar-en.texinfo,v 2.51 2009-03-18 14:59:59 akf Exp $
 
 @comment %**start of header
 @setfilename akfavatar-en.info
@@ -912,51 +912,40 @@ installed.  Uncompressed @code{BMP} images are always supported.
 @item rawaudiosettings @var{samplingrate} 8|16 signed|unsigned little|big mono|stereo
 settings for loading raw audio files
 
+This command is needed before you can play any raw audio files.
+Raw audio files contain PCM encoded audio data with no header or container
+format.
+
 For example: @samp{rawaudiosettings 22050 16 signed little mono}
 
 @item audio @var{audiofile}
-loads and plays an audio file in wave-format
+loads and plays an audio file
 
 The text continues to be shown, so you can play an audio file with the 
 recorded words of the following text.
 
 Supported are @code{WAV}-files with @code{PCM} or @code{ADPCM} encoding.
-
-@item rawaudio @var{audiofile}
-loads and plays a raw audio file
-
-The settings are taken from a previous @command{rawaudiosettings} command.
-
-The text continues to be shown, so you can play an audio file with the 
-recorded words of the following text.
+After the command @command{rawaudiosettings} is used, it can also play raw
+audio files.
 
 @item audioloop @var{audiofile}
 like @command{audio}, but the audio-data is played in an endless loop
 
-@item rawaudioloop @var{audiofile}
-like @command{rawaudio}, but the audio-data is played in an endless loop
-
 @item loadaudio @var{audiofile}
-loads an audio file in wave-format for later playback
+loads an audio file for later playback
 
 Only one single audio file can be loaded at a time. An eventually running 
 audio-output is stopped by this command.
 
 Supported are @code{WAV}-files with @code{PCM} or @code{ADPCM} encoding.
-
-@item loadrawaudio @var{audiofile}
-loads a raw audio file for later playback
-
-The settings are taken from a previous @command{rawaudiosettings} command.
-
-Only one single audio file can be loaded at a time. An eventually running 
-audio-output is stopped by this command.
+After the command @command{rawaudiosettings} is used, it can also load raw
+audio files.
 
 @item playaudio
-plays an audio file loaded by @command{loadaudio} or @command{loadrawaudio}
+plays an audio file loaded by @command{loadaudio}
 
 @item playaudioloop
-plays an audio file loaded by @command{loadaudio} or @command{loadrawaudio}
+plays an audio file loaded by @command{loadaudio}
 in an endless loop
 
 @item stopaudio
